--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,6 +46,7 @@ div.form-wrap{
 }
 
 div.form-wrap input#field{
+	color: white;
 	border: none;
 	background-color: rgba(0, 0, 0, 0);
 	padding: 15px 0px 15px 5px;
@@ -92,7 +93,7 @@ div.info .title{
 }
 
 div.info .head1{
-	margin-top: 140px;
+	margin-top: 100px;
 	font-size: 25px;
 	margin-bottom: 15px;
 	padding-bottom: 0px;
@@ -114,8 +115,11 @@ div.info button{
 	background-color: #ABEBC6;
 }
 
-div.info button a{
+div.info a.button, div.form-wrap a{
 	text-decoration: none;
+	background-color: #ABEBC6;
+	padding: 10px 15px;
+	border-radius: 5px;
 }
 
 div.info p.terms{
@@ -266,4 +270,59 @@ div.header ul li a{
 
 div.header ul li.logout-tag, div.header ul li.home-tag{
 	margin-left: 30px;
+}
+
+p.create-account{
+	display: none;
+}
+
+@media (max-width:640px){
+	div.header ul {
+		padding-left: 3px;
+	}
+	
+	div.header ul > :first-child{
+		width: 360px;
+		display: block;
+		font-size: 30px;
+		text-align: center;
+	}
+	
+	div.header ul li {
+		margin-left: 0px;
+		font-size: 10px;
+	}
+	
+	div.header ul li input {
+		display: none;
+	}
+	
+	div.header ul li button{
+		display: none;
+	}
+	
+	div.header ul li.logout-tag, div.header ul li.home-tag {
+		margin-left: 15px;
+	}
+	
+	div.ans-content {
+		left: 4%;
+	}
+	
+	div.login-content div.info {
+		display: none;
+	}
+	
+	div.login-content div.login {
+		width: 100%;
+	}
+	
+	form.login-form p a{
+		color: #ABEBC6;
+		text-decoration: none;
+	}
+	
+	p.create-account{
+		display: inline;
+	}
 }
