--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,7 +162,7 @@ div.answers{
 
 div.answers a{
 	text-decoration: none;
-	color: black;
+	color: blue;
 }
 
 div.answers a:hover{
@@ -274,6 +274,72 @@ div.header ul li.logout-tag, div.header ul li.home-tag{
 
 p.create-account{
 	display: none;
+}
+
+div.profile-pic{
+	background-color: white;
+	position: absolute;
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	z-index: 100;
+	left: 45%;
+	top: 20%;
+	padding: 5px;
+}
+
+div.profile-pic img{
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+}
+
+div.profile-information{
+	background-color: #FCF3CF;
+	overflow: auto;
+	padding: 10px;
+}
+
+div.profile-information .left{
+	float: left;
+	width: 50%;
+}
+
+div.profile-information .left tr td{
+	text-align: left;
+}
+
+div.profile-information .right{
+	float: right;
+	width: 50%;
+}
+
+div.profile-information .right tr td{
+	text-align: right;
+}
+
+div.profile-information table tr{
+	font-weight: bold;
+	font-size: 18px;
+}
+
+div.profile-section{
+	overflow: auto;
+}
+
+div.profile-section .left-section{
+	float: left;
+	width: 50%;
+}
+
+div.profile-section .left-section h2, div.profile-section .right-section h2{
+	text-align: center;
+}
+
+div.profile-section .right-section{
+	float: left;
+	width: 50%;
 }
 
 @media (max-width:640px){
